Add initial files for public directory and application setup
- Created .gitKeep file in the public directory to ensure it is tracked by Git.
- Added temp directory in public for temporary files.
- Initialized app.js in the src directory for application logic.
- Created index.js in the src directory as the entry point for the application.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Decentalized product traceable system",
   "main": "index.js",
   "scripts": {
+    "type": "module",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,5 +13,13 @@
     "java"
   ],
   "author": "Tanushka Kashyap",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "express": "^5.1.0",
+    "mongoose": "^8.16.4",
+    "prettier": "^3.6.2"
+  }
 }
