--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nishchayledge",
   "version": "1.0.0",
   "description": "Decentalized product traceable system",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "type": "module",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,14 +20,17 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^2.0.2",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "qrcode": "^1.5.4"
   }
 }
